--- a/src/app/pages/faq/faq.component.html
+++ b/src/app/pages/faq/faq.component.html
@@ -1,3 +1,80 @@
-<p>
-  faq works!
-</p>
+<div class="mt-5"></div>
+
+
+      <section class="faq-section">
+        <div class="container">
+          <div class="row">
+                            <!-- ***** FAQ Start ***** -->
+                            <div class="col-md-6 offset-md-3">
+        
+                                <div class="faq-title text-center pb-3">
+                                    <h2>Preguntas frecuentes</h2>
+                                </div>
+                                <h3 class="txt-noticia-inicio pb-5 text-orange  texto-monserrat"><p>Te explicamos algunas de las dudas mas frecuentes de nuestros usuarios
+                                </p></h3>
+                            </div>
+                            <div class="col-md-6 offset-md-3">
+                                <div class="faq" id="accordion">
+                                    <div class="card">
+                                        <div class="card-header" id="faqHeading-1">
+                                            <div class="mb-0 animated fadeIn slow">
+                                                <h5 class="faq-title " data-toggle="collapse"  (click)="toggleCollapse()" data-target="#faqCollapse-1" data-aria-expanded="true" data-aria-controls="faqCollapse-1">
+                                                    <span class="badge"><i class="fas fa-question"></i></span>¿Puedo pagar con cualquier tarjeta de crédito o débito?
+                                                </h5>
+                                            </div>
+                                        </div>
+                                        <div id="faqCollapse-1" [class.show]="show" class="collapse animated fadeIn slow" aria-labelledby="faqHeading-1" data-parent="#accordion">
+                                            <div class="card-body">
+                                                <p>Sí, puedes pagar con tu cuenta de MercadoPago y seleccionar con cual de tus tarjeta quieres suscribirte</p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="card">
+                                        <div class="card-header" id="faqHeading-1">
+                                            <div class="mb-0 animated fadeIn slow">
+                                                <h5 class="faq-title " data-toggle="collapse"  (click)="toggleCollapse()" data-target="#faqCollapse-1" data-aria-expanded="true" data-aria-controls="faqCollapse-1">
+                                                    <span class="badge"><i class="fas fa-question"></i></span>Me suscribí, ¿Y ahora que hago?
+                                                </h5>
+                                            </div>
+                                        </div>
+                                        <div id="faqCollapse-1" [class.show]="show" class="collapse animated fadeIn slow" aria-labelledby="faqHeading-1" data-parent="#accordion">
+                                            <div class="card-body">
+                                                <p>En el momento en que realizes el pago, nos llegara una notificación. En unos pocos minutos te llegara un correo avisandote que tu usuario ha sido validado y podras empezar a usar clinicaz al instante</p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="card">
+                                        <div class="card-header" id="faqHeading-1">
+                                            <div class="mb-0 animated fadeIn slow">
+                                                <h5 class="faq-title " data-toggle="collapse"  (click)="toggleCollapse()" data-target="#faqCollapse-1" data-aria-expanded="true" data-aria-controls="faqCollapse-1">
+                                                    <span class="badge"><i class="fas fa-question"></i></span>No se por donde comenzar a usar la aplicación
+                                                </h5>
+                                            </div>
+                                        </div>
+                                        <div id="faqCollapse-1" [class.show]="show" class="collapse animated fadeIn slow" aria-labelledby="faqHeading-1" data-parent="#accordion">
+                                            <div class="card-body">
+                                                <p>No te preocupes, si estas usando por primera vez la aplicación tendras habilitado el modo "Guia", el cual te dira que accion realiza cada vista. Una vez que aprendiste a usar la aplicación podras deshabilitarla</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="card">
+                                        <div class="card-header" id="faqHeading-1">
+                                            <div class="mb-0 animated fadeIn slow">
+                                                <h5 class="faq-title " data-toggle="collapse"  (click)="toggleCollapse()" data-target="#faqCollapse-1" data-aria-expanded="true" data-aria-controls="faqCollapse-1">
+                                                    <span class="badge"><i class="fas fa-question"></i></span>Deje de atender pacientes cada 45 minútos y y ahora los atiendo  cada 1 hora, ¿Puedo cambiar mi agenda?
+                                                </h5>
+                                            </div>
+                                        </div>
+                                        <div id="faqCollapse-1" [class.show]="show" class="collapse animated fadeIn slow" aria-labelledby="faqHeading-1" data-parent="#accordion">
+                                            <div class="card-body">
+                                                <p>Sí puedes archivar tus períodos de atención que no uses, o habilitar varios para poder dar distintos turnos </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                          </div>
+                        </div>
+                        </section>
