--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -1,175 +1,131 @@
-<div class=" pb-5 animated fadeIn ">
+<div class=" pb-5 animated fadeIn example">
   
-
-    <div class="mt-5"></div>
-  <div class="   ">
-    
-      <div class="row img-principal">
-          <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-1 col-lg-1">	</div>
-          <div class=" row pt-5 d-flex justify-content-center col-sm-12 ml-2 col-md-10">
-            
-            <div>
-              
-              <b><h1 class="txt-noticia-inicio">Sofware de gestión en salud</h1></b>
-              <b><h3 class="txt-noticia-inicio pb-5 text-blue"><p>"Pensado para todos los profesionales de la salud"
-                
-              </p></h3></b>
-              
-              <button class="btn btn-success btn-lg  d-flex justify-content-center" routerLink="/registro">Contratalo Ahora</button>
-              <br>
-            </div>
-            
-        </div>
-        <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-1 col-lg-1">	</div>
-      </div>
-
-        <div class="row">
-            <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
-        <div class=" row mt-5 d-flex justify-content-center col-sm-12 ml-2 col-md-6">
-          <div>
-              <div class="card">
-                  <div class="card-body">
-            <b><h3 class="txt-noticia-inicio">¿En que me beneficia el uso de este software?</h3></b>
-            <b><p class="txt-noticia-inicio pb-5 text-blue">Es un sofware en la nube, con esta tecnólogia  podes consultar tu agenda y ver tus historias clínicas donde quieras y desde cualquier dispositivo</p></b>
-          </div>
-        </div>
-            <br>
-          </div>
-        </div>
-        <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
-      </div>
-
-      
-       
-      <div class="row ">
-          <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
-      <div class=" row  d-flex justify-content-center col-sm-12 ml-2 col-md-6">
-          <div>
-              <div class="card">
-                  <div class="card-body">
-            <b><h3 class="txt-noticia-inicio">¿Si mi trabajo se desarrolla en distintas clíncas puedo tener distintas agendas?</h3></b>
-            <b><p class="txt-noticia-inicio pb-5 text-blue">Si, dependiendo del modulo que elijas puedes administrar distintas clinicas y tener tus  agendas para cada una de ellas. Incluso puedes amplicar la cantidad de clínicas</p></b>
-          </div>
-        </div>
-            <br>
-          </div>
-        </div>
-        <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
-      </div>
-
-        <div class="background-slide-1">
-        <div class="row ">
-            <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
-        <div class=" row mt-5 d-flex justify-content-center col-sm-12 ml-2 col-md-6">
-          <div>
-              <div class="card">
-                  <div class="card-body">
-            <b><h3 class="txt-noticia-inicio">Tengo una secretaria que se encarga de la gestión de mis turnos, ¿puedo agregarla al sistema?</h3></b>
-            <b><p class="txt-noticia-inicio pb-5 text-blue">Podes elegir que usuario es un "Médico"  y asignar roles a cada usuario (Ejemplo : Una secretaria podra dar turnos, pero no podra modificar historias clinicas), 
-              si contas con personal administrativo podes asignarle roles de facturación , auditoria y liquidación </p></b>
-            </div>
-          </div>
-            <br>
-          </div>
-        </div>
-        <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
-      </div>
-
-
-        <div class="row ">
-            <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
-        <div class=" row pt-2 d-flex justify-content-center col-sm-12 ml-2 col-md-6">
-          <div>
-              <div class="card">
-                  <div class="card-body">
-            <b><h3 class="txt-noticia-inicio">¿Somos un grupo de profesionales , podemos trabajar con una misma cuenta?</h3></b>
-            <b><p class="txt-noticia-inicio pb-5 text-blue">Cada módulo tiene una cantidad de usuarios que puede ser ampliada. Puedes combinar los usuarios y clínicas para tener tu agenda organizada </p></b>
-          </div>
-        </div>
-            <br>
-          </div>
-        </div>
-        <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
-      </div>
+      <label class="  text-gray d-flex justify-content-center label-h1 mb-5 pt-5 mr-1 ml-1">
+         
+       </label>
+       <div class="faq-title text-center pb-3">
+        <h2>  ¿Por que deberias usar este software?</h2>
     </div>
 
-        <div class="row background-principal-3 ">
-            <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
-        <div class=" row mt-5 d-flex justify-content-center col-sm-12 ml-2 col-md-6">
+      <div class=" d-flex justify-content-center">            
+        <div class=" row  d-flex justify-content-center col-sm-12  col-md-6">
           <div>
-              <div class="card">
+              <div class="card ">
                   <div class="card-body">
-            <b><h3 class="txt-noticia-inicio">¿Necesito saber cuantas ordenes realize y cuanto deberia cobrar?</h3></b>
-            <b><p class="txt-noticia-inicio pb-5 text-blue">El modulo "CLINICAS" te permite realizar cobros,  cargar ordenes y obtener un resúmen de tus consultas. Asi siempre sabras tu estado financiero </p></b>
+            <label  class="txt-noticia-inicio label-h4">¿En que me beneficia el uso de este software?</label>
+            <p class="txt-noticia-inicio text-blue">La arquitectura de este software esta alojada en la nube, con esta tecnólogia  podes consultar tu agenda y ver tus historias clínicas donde quieras y desde cualquier dispositivo</p>
+          </div>
+        </div>            
+          </div>
+        </div>        
+      </div>
+
+      <div class=" d-flex justify-content-center">            
+        <div class=" row  d-flex justify-content-center col-sm-12  col-md-6">
+          <div>
+              <div class="card ">
+                  <div class="card-body">
+            <label  class="txt-noticia-inicio label-h4"> ¿Si mi trabajo se desarrolla en distintas clíncas puedo tener distintas agendas?</label>
+            <p class="txt-noticia-inicio  text-blue">Sí, dependiendo del módulo que elijas puedes administrar distintas clinicas y tener tus  agendas para cada una de ellas. Incluso puedes ampliar la cantidad de clínicas</p>
+          </div>
+        </div>            
+          </div>
+        </div>        
+      </div>
+   
+      <div class=" d-flex justify-content-center">            
+        <div class=" row  d-flex justify-content-center col-sm-12  col-md-6">
+          <div>
+              <div class="card ">
+                  <div class="card-body">
+            <label  class="txt-noticia-inicio label-h4">Tengo una secretaria que se encarga de la gestión de mis turnos, ¿puedo agregarla al sistema?</label>
+            <p class="txt-noticia-inicio text-blue">Podes elegir que usuario es un "Médico"  y asignar roles a cada usuario (Ejemplo : Una secretaria podra dar turnos, pero no podra modificar historias clinicas), 
+              si contas con personal administrativo podes asignarle roles de facturación , auditoria y liquidación </p>
+            </div>
+          </div>
+            <br>
+          </div>
+        </div>        
+      </div>
+
+      <div class=" d-flex justify-content-center">            
+        <div class=" row  d-flex justify-content-center col-sm-12  col-md-6">
+          <div>
+              <div class="card ">
+                  <div class="card-body">
+            <label  class="txt-noticia-inicio label-h4">¿Somos un grupo de profesionales , podemos trabajar con una misma cuenta?</label>
+            <p class="txt-noticia-inicio  text-blue">Cada módulo tiene una cantidad de usuarios que puede ser ampliada. Puedes combinar los usuarios y clínicas para tener tu agenda organizada </p>
+          </div>
+        </div>
+            <br>
+          </div>
+        </div>        
+      </div>
+
+      <div class=" d-flex justify-content-center">            
+        <div class=" row  d-flex justify-content-center col-sm-12  col-md-6">
+          <div>
+              <div class="card ">
+                  <div class="card-body">
+            <label  class="txt-noticia-inicio label-h4">¿Necesito saber cuantas ordenes realize y cuanto deberia cobrar?</label>
+            <p class="txt-noticia-inicio  text-blue">El módulo "CLINICAS" te permite realizar cobros,  cargar ordenes y obtener un resúmen de tus consultas. Asi siempre sabras tu estado financiero </p>
+          </div>
+        </div>
+            <br>
+          </div>
+        </div>        
+      </div>
+
+      <div class=" d-flex justify-content-center">            
+        <div class=" row  d-flex justify-content-center col-sm-12  col-md-6">
+          <div>
+              <div class="card ">
+                  <div class="card-body">
+            <label  class="txt-noticia-inicio label-h4">¿Como controlo las ordenes recibidas de obras sociales?</label>
+            <p class="txt-noticia-inicio text-blue">Puedes realizar operaciones de cobro de obras sociales y agruparlas para saber cuantas ordenes  presentaron. clinicAZ posee un módulo muy potente para gestionar todas las obras sociales con sus respectivas modalidades </p>
           </div>
         </div>
             <br>
           </div>
         </div>
-        <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
       </div>
-
-        <div class="row background-principal-3">
-            <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
-        <div class=" row pt-2 d-flex justify-content-center col-sm-12 ml-2 col-md-6">
+  
+      <div class=" d-flex justify-content-center">            
+        <div class=" row  d-flex justify-content-center col-sm-12  col-md-6">
           <div>
-              <div class="card">
+              <div class="card ">
                   <div class="card-body">
-            <b><h3 class="txt-noticia-inicio">¿Como controlo las ordenes recibidas de obras sociales?</h3></b>
-            <b><p class="txt-noticia-inicio pb-5 text-blue">Puedes realizar operaciones de cobro de obras sociales y agruparlas para saber cuantas ordenes  presentaron. clinicAZ posee un módulo muy potente para gestionar todas las obras sociales con sus respectivas modalidades </p></b>
-          </div>
-        </div>
-            <br>
-          </div>
-        </div>
-        <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
-      </div>
-
-
-      <div class="background-slide-1">
-        <div class="row ">
-            <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
-        <div class=" row mt-5 d-flex justify-content-center col-sm-12 ml-2 col-md-6">
-            <div>
-                <div class="card">
-                    <div class="card-body">
-              <b><h3 class="txt-noticia-inicio">¿Puedo realizar factura electrónica?</h3></b>
-              <b><p class="txt-noticia-inicio pb-5 text-blue">Si, solo debes pasarnos el certificado ".crt" y la key ".key" que generas en tu perfil de AFIP, luego podras configurar tu punto de venta  </p></b>
+              <label  class="txt-noticia-inicio label-h4">¿Puedo realizar factura electrónica?</label>
+              <p class="txt-noticia-inicio  text-blue texto-josefina">Si, solo debes pasarnos el certificado ".crt" y la key ".key" que generas en tu perfil de AFIP, luego podras configurar tu punto de venta  </p>
             </div>
           </div>
               <br>
             </div>
-          </div>
-          <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
+          </div>          
         </div>
 
-          <div class="row ">
-              <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
-          <div class=" row pt-2 d-flex justify-content-center col-sm-12 ml-2 col-md-6">
-              <div>
-                  <div class="card">
-                      <div class="card-body">
-                <b><h3 class="txt-noticia-inicio">Le solicité a mi paciente estudios ¿Puedo adjuntarlos a su historia clínica?</h3></b>
-                <b><p class="txt-noticia-inicio pb-5 text-blue">Puedes subir los estudios a la historia clínica en formato PDF JPG y PNG, existe un limite en el tamaño de subida del archivo asi que ten en cuenta   </p></b>
+        <div class=" d-flex justify-content-center">            
+          <div class=" row  d-flex justify-content-center col-sm-12  col-md-6">
+            <div>
+                <div class="card ">
+                    <div class="card-body">
+                <label  class="txt-noticia-inicio label-h4">Le solicité a mi paciente estudios ¿Puedo adjuntarlos a su historia clínica?</label>
+                <p class="txt-noticia-inicio  text-blue">Puedes subir los estudios a la historia clínica en formato PDF JPG y PNG, existe un limite en el tamaño de subida del archivo asi que ten en cuenta   </p>
                    
               </div>
             </div>
                 <br>
               </div>
-            </div>
-            <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
+            </div>            
           </div>
-        </div>
-
-          <div class="row">
-              <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
-          <div class=" row pt-2 d-flex justify-content-center col-sm-12 ml-2 col-md-6">
+       
+          <div class=" d-flex justify-content-center">            
+            <div class=" row  d-flex justify-content-center col-sm-12  col-md-6">
               <div>
-                  <div class="card">
+                  <div class="card ">
                       <div class="card-body">
-                 
-                        <b><h3 class="txt-noticia-inicio card-title">En mi provincia la obra social D.O.S solicita distintos requerimientos a los de otras obras sociales</h3></b>
-                        <b><p class="txt-noticia-inicio pb-5 text-blue card-text">Contemplamos todos los procesos de D.O.S desde consultas hasta cirugias, tanto como su presentación  en papel y archivo .TXT, y sus coseguros </p></b>
+                        <label class="txt-noticia-inicio label-h4">En mi provincia la obra social D.O.S solicita distintos requerimientos a los de otras obras sociales</label>
+                        <p class="txt-noticia-inicio  text-blue card-text">Contemplamos todos los procesos de D.O.S desde consultas hasta cirugias, tanto como su presentación  en papel y archivo .TXT, y sus coseguros </p>
 
                       
                       </div>
@@ -180,8 +136,8 @@
                 <br>
               </div>
             </div>
-            <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
-          </div>
-            
+    
+</div>
+
 </div>
    
