--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -1,49 +1,116 @@
 <div class="m-3">
   <br>
 </div>
-<div class="d-flex justify-content-center mt-5 mb-5">
+<div class="d-flex justify-content-center mt-5 mb-5 animated fadeIn slow ">
 
-    <div class="row col-6">
+    <div class="row col-md-6  col-xs-12 col-sm-12 m-3 d-flex justify-content-center">
         
-        <form role="form">
+        <form role="form" [formGroup]="userForm">
           <h2>Por favor, registrese </h2><h6><small class="text-secondary">Completando el registro podras realizar el pago</small></h6>
           <hr class="colorgraph">
           <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-6">
+            <div class="col-xs-12 col-sm-12 col-md-10">
               <div class="form-group">
-                            <input type="text" name="first_name" id="first_name" class="form-control input-lg" placeholder="Nombres" tabindex="1">
+                            <input type="text" name="first_name" id="first_name" class="form-control input-lg" formControlName="titular_nombre" placeholder="Nombres" tabindex="1">
+                            <div *ngIf="userForm.controls['titular_nombre'].invalid && (userForm.controls['titular_nombre'].dirty || userForm.controls['titular_nombre'].touched)" class="alert alert-warning">
+                               <div *ngIf="userForm.controls['titular_nombre'].errors.required">
+                                Este campo es requerido.
+                               </div>     
+                            </div> 
               </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-6">
+            <div class="col-xs-12 col-sm-12 col-md-10">
               <div class="form-group">
-                <input type="text" name="last_name" id="last_name" class="form-control input-lg" placeholder="Apellido" tabindex="2">
-              </div>
-            </div>
-          </div>
-          <div class="form-group">
-            <input type="text" name="display_name" id="display_name" class="form-control input-lg" placeholder="Usuario" tabindex="3">
-          </div>
-          <div class="form-group">
-            <input type="email" name="email" id="email" class="form-control input-lg" placeholder="Email" tabindex="4">
-          </div>
-          <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-6">
-              <div class="form-group">
-                <input type="password" name="password" id="password" class="form-control input-lg" placeholder="Conraseña" tabindex="5">
-              </div>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-6">
-              <div class="form-group">
-                <input type="password" name="password_confirmation" id="password_confirmation" class="form-control input-lg" placeholder="Confirmar Contraseña" tabindex="6">
+                <input type="text" name="last_name" id="last_name" class="form-control input-lg" formControlName="titular_apellido" placeholder="Apellido" tabindex="2">
+                <div *ngIf="userForm.controls['titular_apellido'].invalid && (userForm.controls['titular_apellido'].dirty || userForm.controls['titular_apellido'].touched)" class="alert alert-warning">
+                  <div *ngIf="userForm.controls['titular_apellido'].errors.required">
+                   Este campo es requerido.
+                  </div>     
+               </div> 
+    
               </div>
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-4 col-sm-3 col-md-3">
+          <div class="col-xs-12 col-sm-12 col-md-10">
+          <div class="form-group">
+            <input type="text" name="display_name" id="display_name" class="form-control input-lg" formControlName="name" placeholder="Usuario" tabindex="3">
+            <div *ngIf="userForm.controls['name'].invalid && (userForm.controls['name'].dirty || userForm.controls['name'].touched)" class="alert alert-warning">
+              <div *ngIf="userForm.controls['name'].errors.required">
+               Este campo es requerido.
+              </div>     
+           </div> 
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-10"> 
+          <div class="form-group">
+            <input type="email" name="email" formControlName="email" id="email" class="form-control input-lg" placeholder="Email" tabindex="4">
+            <div *ngIf="userForm.controls['email'].invalid && (userForm.controls['email'].dirty || userForm.controls['email'].touched)" class="alert alert-warning">
+              <div *ngIf="userForm.controls['email'].errors.required">
+               Este campo es requerido.
+              </div>     
+           </div> 
+          </div>
+        </div>
+      </div>
+          <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-5">
+              <div class="form-group">
+                <input formControlName="password" type="password" name="password" id="password" class="form-control input-lg" placeholder="Conraseña" tabindex="5">
+                <div *ngIf="userForm.controls['password'].invalid && (userForm.controls['password'].dirty || userForm.controls['password'].touched)" class="alert alert-warning">
+                  <div *ngIf="userForm.controls['password'].errors.required">
+                   Este campo es requerido.
+                  </div>     
+               </div> 
+              </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-5">
+              <div class="form-group">
+                <input formControlName="repassword"  type="password" name="password_confirmation" id="password_confirmation" class="form-control input-lg" placeholder="Confirmar Contraseña" tabindex="6">
+                <div *ngIf="userForm.controls['repassword'].invalid && (userForm.controls['repassword'].dirty || userForm.controls['repassword'].touched)" class="alert alert-warning">
+                  <div *ngIf="userForm.controls['repassword'].errors.required">
+                   Este campo es requerido.
+                  </div>     
+               </div> 
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-10"> 
+              <div class="form-group">
+                <input type="email" name="direccion" formControlName="titular_direccion" id="email" class="form-control input-lg" placeholder="Dirección" tabindex="4">
+                <div *ngIf="userForm.controls['titular_direccion'].invalid && (userForm.controls['titular_direccion'].dirty || userForm.controls['titular_direccion'].touched)" class="alert alert-warning">
+                  <div *ngIf="userForm.controls['titular_direccion'].errors.required">
+                   Este campo es requerido.
+                  </div>     
+               </div> 
+              </div>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-10"> 
+                <div class="form-group">
+                  <input type="email" name="telefono" formControlName="titular_telefono" id="direccion" class="form-control input-lg" placeholder="Teléfono" tabindex="4">
+                  <div *ngIf="userForm.controls['titular_telefono'].invalid && (userForm.controls['titular_telefono'].dirty || userForm.controls['titular_telefono'].touched)" class="alert alert-warning">
+                    <div *ngIf="userForm.controls['titular_telefono'].errors.required">
+                     Este campo es requerido.
+                    </div>     
+                 </div> 
+                </div>
+              </div>
+            </div>
+          <div class="row">
+            <div class="col-xs-4 col-sm-3 col-md-4">
+                <label  class="btn" data-color="info" tabindex="7">Estoy de acuerdo</label>
               <span class="button-checkbox">
-                <button type="button" class="btn" data-color="info" tabindex="7">Estoy de acuerdo</button>
-                            <input type="checkbox" name="t_and_c" id="t_and_c" class="hidden" value="1">
+                
+                            <input formControlName="acuerdo" type="checkbox" name="t_and_c" id="t_and_c" class="hidden" value="1">
               </span>
+              <div *ngIf="userForm.controls['acuerdo'].invalid && (userForm.controls['acuerdo'].dirty || userForm.controls['acuerdo'].touched)" class="alert alert-warning">
+                  <div *ngIf="userForm.controls['acuerdo'].errors.required">
+                   Este campo es requerido.
+                  </div>     
+               </div> 
+              
             </div>
             <div class="col-xs-8 col-sm-9 col-md-9">
                Haciendo click en  <strong class="label label-primary">Registrarse</strong>, Usted esta de acuerdo <a target="_blank"  routerLink="/terminos" data-toggle="modal" >con los terminos y condiciones</a> sobre la aplicación, incluyendo nuesto uso de Cookie .
@@ -52,12 +119,15 @@
           
           <hr class="colorgraph">
           <div class="row">
-              <div class="col-xs-12 col-md-6"><a href="#" class="btn btn-info btn-block btn-lg">Registrarse</a></div>
-            <div class="col-xs-12 col-md-6"><a href="http://clinicaz.com.ar/app" target="_blank" class="btn btn-success btn-block btn-lg">Ingresar</a></div>
+            <div class="col-xs-12 col-md-6"><a href="http://clinicaz.com.ar/app" target="_blank" class="btn btn-success btn-block btn-lg">Mi cuenta</a></div>
+            <div class="col-xs-12 col-md-6"><button   [disabled]="userForm.invalid" class="btn btn-info btn-block btn-lg" (click)="crearUsuario()" type="submit"  >Registrarse</button></div>
           </div>
         </form>
       </div>
     </div>
+
+    <!-- <p>Form value: {{ userForm.value | json }}</p>
+<p>Form status: {{ userForm.status | json }}</p> -->
     <!-- Modal -->
     <div class="modal fade" id="t_and_c_m" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-lg">
