--- a/src/app/pageses/institucional/contacto/contacto.component.html
+++ b/src/app/pageses/institucional/contacto/contacto.component.html
@@ -1,42 +1,69 @@
-<div class="background-contacto  cuadro-size animated fadeIn slow ">
-  <div class=" row ">
+<div class="  animated fadeIn slow example">
+
+    
+
+ 
     
     	
-			<div class=" col-md-6 col-sm-12 col-xs-12    col-sm-ml-2 col-sm-mr-2 animated slideInLeft mt-5">
-          <div class="row ">
-            	<div class="col-md-4 col-sm-0 ol-xs-0"></div>
-              <div class="col-md-7 col-sm-12 col-xs-12 m-2 pt-5 pb-5 col-sm-ml-2 col-sm-mr-2 mt-5">
+			
+          <div class="row d-flex justify-content-center">
+            	<div class="col-md-4 col-sm-0 col-xs-0 col-lg-2 col-xl-2"></div>
+              <div class="col-md-4 col-sm-12 col-xs-12 m-2  pb-5  mt-2">
                   <br>
-                  <div class="card">
-                      <div class="card-header"><h1 class=" text-blue texto-oxygen">CONTACTO</h1></div>
-                      <div class="card-body">
-                   <h3 class="txt-noticia-inicio d-sm-block d-none d-flex justify-content.center text-blue"><i class="far fa-clock mr-2"></i> Horarios de atención:   Lunes  a viernes</h3>
-                  <h3 class="txt-noticia-inicio mr-2 d-sm-block d-none text-blue">De 8:00 a 20:00 hs.</h3>
-                  <br>
-                  <h3 class="txt-noticia-inicio d-sm-block d-none text-blue"><i class="fas fa-phone mr-2"></i>  +54 9 264 5453019</h3>
-                  <br>
-                  <h3 class="txt-noticia-inicio d-sm-block d-none text-blue"><i class="far fa-envelope mr-2"></i> Contacto: info@clinicaz.com.ar</h3>
-                 
-                  <h5 class="txt-noticia-inicio d-none d-sm-block d-block d-sm-none d-md-none text-blue"><i class="far fa-clock mr-2"></i>  Horarios de atención:  Lun. a vie. De 8:00 a 20:00 hs.</h5>
+                  <div class="card"> 
+                    <a > 
+                    <div class="card-img"> 
+                    <img src="./assets/img/capacitaciones.jpe">
+                    <div class=" d-flex justify-content-center mt-2">
+                    <label class="label-h2 text-info  d-flex justify-content-center ml-2 ">Contactanos</label> 
+                    <label class="text-secondary label-h5  d-flex justify-content-end mr-2"> </label></div>
+                    </div> 
                   
-                  <br>
-                  <h5 class="txt-noticia-inicio d-none d-sm-block d-block d-sm-none d-md-none text-blue"><i class="fas fa-phone mr-2"></i>  +54 9 264 5453019</h5>
-                  <br>
-                  <h5 class="txt-noticia-inicio d-none d-sm-block d-block d-sm-none d-md-none text-blue"><i class="far fa-envelope mr-2"></i>Contacto:  info@clinicaz.com.ar</h5>
-                </div>
+                    <div class="card-bottom"> 
+                    <div class="card-title"> 
+                      <h5 class="texto-monserrat d-sm-block d-none d-flex justify-content.center text-blue"><i class="far fa-clock mr-2"></i> Horarios de atención:   </h5>
+                      <h5 class=" ml-5 texto-monserrat mr-2 d-sm-block d-none text-blue">Lunes  a viernes</h5>
+                      <h5 class=" ml-5 texto-monserrat mr-2 d-sm-block d-none text-blue">De 8:00 a 20:00 hs.</h5>
+                      <br>
+                      <h5 class="texto-monserrat d-sm-block d-none text-blue"><i class="fas fa-phone mr-2"></i>  +54 9 264 5453019</h5>
+                      <br>
+                      <h5 class="texto-monserrat d-sm-block d-none text-blue"><i class="far fa-envelope mr-2"></i> Contacto: info@clinicaz.com.ar</h5>
+                     
+                      <h5 class="texto-monserrat d-none d-sm-block d-block d-sm-none d-md-none text-blue"><i class="far fa-clock mr-2"></i>  Horarios de atención:  Lun. a vie. De 8:00 a 20:00 hs.</h5>
+                      
+                      <br>
+                      <h5 class="texto-monserrat d-none d-sm-block d-block d-sm-none d-md-none text-blue"><i class="fas fa-phone mr-2"></i>  +54 9 264 5453019</h5>
+                      <br>
+                      <h5 class="texto-monserrat d-none d-sm-block d-block d-sm-none d-md-none text-blue"><i class="far fa-envelope mr-2"></i>Contacto:  info@clinicaz.com.ar</h5>
+                    <div class=" d-flex justify-content-center m-2">
+                      <div id="container">
+                        <div class="d-flex justify-content-center mb-3 pt-3">
+                          <a href="https://www.facebook.com/Clinicaz-102214751215321/" class="social-item facebook-color" id="3" target="_blank">
+                            <i class="fab fa-facebook-f social-icon"></i>
+                          </a>
+                          <a href="https://www.instagram.com/clinicaz.software/" class="social-item instagram-color" id="6" target="_blank">
+                            <i class="fab fa-instagram social-icon"></i>
+                          </a>  
+                        </div>
+                      </div>
+                    </div>                   
+                     
+                    </div> 
+                    </div> 
+                    </a> 
+
+
+
               </div>
-              </div>
-              <div class="col-md-1 col-sm-0 col-xs-0"></div>
+              <div class="col-md-4 col-sm-0 col-xs-0  col-lg-2"></div>
         </div>
-        <hr class="d-sm-block d-none">
+      
         <br>
         <br>        
         <br>
-</div>
-<div class=" col-md-3 col-sm-0 col-xs-0"></div>
-<div class=" col-md-3 col-sm-0 col-xs-0">   </div>
-</div>
+
 
 </div>
 
  
+</div>
