--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,96 +1,54 @@
-
-<nav class=" navbar navbar-expand-lg navbar-default  container-fluid-nav fixed-top animated slideInDown ">
+<div class=" header-inicio ">
+  <nav class=" navbar navbar-expand-lg navbar-default  container-fluid-nav fixed-top animated slideInDown  " >
    
-        <a class="navbar-brand ml-3" routerLink="inicio"><img src="assets/img/logo-clinicaz-texto-blanco-violeta.png" height="40" alt="ClinicAZ"></a>
-        <button class="navbar-toggler my-hover  navbar-toggler-left  " type="button" data-toggle="collapse"
-            (click)="toggleNavbar()">
-            <i class="fa fa-navicon"></i>
+        <a class="navbar-brand ml-3" routerLink="inicio"><img src="assets/images/logo_clinicaz.png" height="50" alt="ClinicAZ"></a>
+        <button class="navbar-toggler my-hover  navbar-toggler-left  navbar-button" type="button" data-toggle="collapse" 
+        (click)="toggleNavbar()">
+        <i class="fa fa-navicon"></i>
     </button>
-  
-
-        <div class="collapse navbar-collapse animated fadeIn slow  "
-        [ngClass]="{ 'show': navbarOpen }">
+    
+      <div class="collapse navbar-collapse animated fadeIn slow navbar-round "
+      [ngClass]="{ 'show': navbarOpen }">
         <ul class="nav navbar-nav slideInDown ">
-            <a class="nav-link btn-menu-uno hvr-shrink" routerLink="inicio" (click)="toggleNavbar()" href="#">Inicio</a>
-        <a class="nav-link btn-menu-uno hvr-shrink" routerLink="faq" (click)="toggleNavbar()" href="#">Preguntas frecuentes</a>
-        <a class="nav-link btn-menu-uno hvr-shrink" routerLink="precios" (click)="toggleNavbar()" href="#">Precios</a>
-
+        <a class=" nav-link btn-menu-uno hvr-shrink texto-monserrat navbar-font " routerLink="inicio" (click)="toggleNavbar()" href="#"><label class="font-size-h6 navbar-font">Inicio</label></a>
+        <a class=" nav-link btn-menu-uno hvr-shrink texto-monserrat navbar-font" routerLink="faq" (click)="toggleNavbar()" href="#"><label class="font-size-h6 navbar-font">Preguntas frecuentes</label></a>
+        <a class=" nav-link btn-menu-uno hvr-shrink texto-monserrat " routerLink="precios" (click)="toggleNavbar()" href="#"><label class="font-size-h6 navbar-font my-hover">Precios</label></a>
+        <a class=" nav-link btn-menu-uno hvr-shrink texto-monserrat navbar-font"  routerLink="contacto"  (click)="toggleNavbar()" ><label class="font-size-h6 navbar-font">Contacto</label></a>
+        <a class=" nav-link btn-menu-uno hvr-shrink texto-monserrat text-ingresar-bold  d-md-none "  routerLink="cuenta "  (click)="toggleNavbar()" ><label class="font-size-h6 navbar-font-green my-hover">INGRESAR</label></a>
+        <a class=" nav-link btn-menu-uno hvr-shrink texto-monserrat text-warning-bold d-md-none d-xl-none d-lg-none " routerLink="registro" (click)="toggleNavbar()" href="#"><label class="font-size-h6 navbar-font-blue my-hover">REGISTRARSE</label></a>
+        
   
  
 
         <div class="d-flex justify-content-between d-flex align-items-center" >
-
-     
-  
-           
-
-
               <div class="d-flex justify-content-end">
-               
-                      <a class="nav-link btn-menu-uno hvr-shrink"  routerLink="contacto" >Contacto</a>
-            
-                      
-                      
-                  
-                </div> 
+              </div> 
+              <div class="d-flex justify-content-start">                  
+              </div> 
         </div>
   </ul>
-  <div class="d-flex justify-content-between d-flex align-items-center .d-md-none .d-lg-block " >
-  <a class="nav-link  hvr-shrink d-flex justify-content-end text-ingresar-bold"  href="http://clinicaz.com.ar/app" target="_blank">INGRESAR</a>
-  <h6  ><a class="nav-link  hvr-shrink  d-flex justify-content-end texto-josefina mt-3 text-warning-bold" routerLink="registro" (click)="toggleNavbar()" href="#">REGISTRARSE</a></h6> 
+  <div class="d-flex justify-content-between d-flex align-items-center .d-md-none .d-lg-block "  (click)="toggleNavbar()" >
+  <a class="nav-link btn-menu-uno hvr-shrink texto-josefina text-ingresar-bold d-sm-none d-md-none d-md-block d-none d-md-block "  routerLink="cuenta"  (click)="toggleNavbar()" ><label class="font-size-h6 navbar-font-green my-hover">INGRESAR</label></a>
+  <a class="nav-link btn-menu-uno hvr-shrink texto-josefina text-warning-bold d-sm-none d-md-none d-md-block  d-none d-md-block" routerLink="registro" (click)="toggleNavbar()" href="#"><label class="font-size-h6 navbar-font-blue my-hover">REGISTRARSE</label></a>
   </div>
 </div>
 
    
   </nav>
-
-
-<!-- 
-      
-    
-<nav class="navbar navbar-expand-lg navbar-default  container-fluid-nav fixed-top animated slideInDown">
-    <a class="navbar-brand" routerLink="inicio"><img src="assets/img/logos-agencia-gobierno.png" height="50" alt=""></a>
-  
-
-
-    <button class="navbar-toggler my-hover  navbar-toggler-right  " type="button" data-toggle="collapse"
-            (click)="toggleNavbar()">
-            <i class="fa fa-navicon"></i>
-    </button>
-  
-  
-    <div class="collapse navbar-collapse animated fadeIn slow  container-fluid-nav text-center "
-         [ngClass]="{ 'show': navbarOpen }">
-      <ul class="nav navbar-nav slideInDown ">
-        <li class="nav-item">
-          <a class="nav-link btn-menu-uno hvr-shrink" routerLink="inicio" (click)="toggleNavbar()" href="#">INICIO</a>
-        </li>
-  
-        <li class="nav-item">
-            <a class="nav-link btn-menu-uno hvr-shrink" routerLink="institucional/quienessomos" (click)="toggleNavbar()" href="#">QUIENES SOMOS</a>
-        </li>
-          
-        <li class="nav-item">
-            <a class="nav-link btn-menu-uno hvr-shrink" routerLink="institucional/financiamiento" (click)="toggleNavbar()" href="#">FINANCIAMIENTO</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link btn-menu-uno hvr-shrink" routerLink="institucional/capacitaciones" (click)="toggleNavbar()" href="#">CAPACITACIONES</a>
-        </li> 
-        <li class="nav-item">
-          <a class="nav-link btn-menu-uno hvr-shrink"  href="http://incubadoraagenciacalidadsanjuan.com.ar/" target="_blank">INCUBADORA</a>
-      </li> 
-        <li class="nav-item">
-            <a class="nav-link btn-menu-uno hvr-shrink" routerLink="institucional/contacto" (click)="toggleNavbar()" href="#">CONTACTO</a>
-        </li> 
-      </ul>
+  <div class="pt-5">
+    <div class="pt-5">        
+    <label class=" text-gray d-flex justify-content-center label-h1 ">Sofware de gestión en salud</label>
+    <label class="txt- pb-5 text-orange   texto-josefina d-flex justify-content-center label-h2">"Pensado para todos los profesionales de la salud"</label>
+    <div class="d-flex justify-content-center">
+      <button class="btn btn-success btn-lg  d-flex justify-content-center d-flex align-items-center" routerLink="/registro"> <i class="far fa-check-circle d-flex align-items-center mr-2"></i>Contratalo Ahora</button>
     </div>
-  </nav>
-
-
     
-    
- -->
+    <br>
+  </div>
+</div>
+</div>
 
 
-  
+
+
   
